<?xml version="1.0" encoding="utf-8"?>
<!--Generated by crowdin.net-->
<resources>
    <string name="aggiungi_account">New account</string>
    <string name="attiva">Active</string>
    <string name="cancella">Delete</string>
    <string name="cancellazione">Deleting files…</string>
    <string name="caricamento">Loading…</string>
    <string name="cartella_locale_corrente">Current local folder</string>
    <string name="chiave_privata">Private Key</string>
    <string name="chiaro">Light</string>
    <string name="codifica">Encoding</string>
    <string name="condividi">Share</string>
    <string name="crea_cartella_locale">New local folder</string>
    <string name="crea_cartella_remota">New remote folder</string>
    <string name="disconneti">Disconnect</string>
    <string name="default_local_folder">Default local folder</string>
    <string name="dove_scaricare">Where to download?</string>
    <string name="download">Download</string>
    <string name="download_completato">Download completed</string>
    <string name="duplicate">Duplicate</string>
    <string name="fatto">Done</string>
    <string name="home">Home</string>
    <string name="host">Host</string>
    <string name="info">Info</string>
    <string name="locale">Local</string>
    <string name="log_in">Logging in…</string>
    <string name="modifica">Edit</string>
    <string name="muovi">Move</string>
    <string name="nascondi">Hide</string>
    <string name="nome_app">Turbo Client</string>
    <string name="nome_app_turbo_editor">Turbo Editor</string>
    <string name="nome_utente">Username</string>
    <string name="passiva">Passive</string>
    <string name="passphrase">Passphrase</string>
    <string name="password">Password</string>
    <string name="password_summary">Leave it empty to prompt for it every session</string>
    <string name="porta">Port</string>
    <string name="preferenze">Preferences</string>
    <string name="remoto">Remote</string>
    <string name="riavva_per_tema">To change the theme, restart the application</string>
    <string name="rinomina">Rename</string>
    <string name="root">Default remote folder</string>
    <string name="salva">Save</string>
    <string name="scuro">Dark</string>
    <string name="seleziona">Select</string>
    <string name="seleziona_account">Select an account</string>
    <string name="sicuro">Are you sure?</string>
    <string name="something_failed">Something failed</string>
    <string name="skip_same_file">Do not transfer same file</string>
    <string name="tema_app">App theme</string>
    <string name="tipo_connessione">Connection type</string>
    <string name="tipo_protocollo">Protocol type</string>
    <string name="un_altra_cartella">Another folder</string>
    <string name="use_passphrase">Use a passphrase</string>
    <string name="upload">Upload</string>
    <string name="upload_completato">Upload completed</string>
    <string name="what_to_do">What do you want todo?</string>
    <string name="wrap_the_text">Word wrap</string>
    <string name="menu_syntax_highlight">Syntax highlight</string>
    <string name="testo_indietro">Undo</string>
    <string name="testo_rifai">Redo</string>
    <string name="sync">Sync</string>
    <string name="remote_folder_to_sync">Remote folder to sync</string>
    <string name="local_folder_to_sync">Local folder to sync</string>
    <string name="vota">Rate</string>
    <string name="inapp_unavailable">Cannot contact Google Play</string>
    <string name="inapp_description">Support the development of other great features.</string>
    <string name="upgrade_premium">Upgrade to Premium</string>
    <string name="upgrade_premium_summary">Upgrade to Premium and support the development of Turbo Client!</string>
    <string name="download_unlocked_version">Download unlocked version</string>
    <string name="inapp_second_description">What is Turbo Client worth to you? Set your price!</string>
    <string name="inapp_first_description">Upgrade to unlock this features:</string>
    <string name="inapp_item_openandeditfiles">Power to open and modify any type of file.</string>
    <string name="inapp_item_backup_service">Backup service to backup and restore your data safely.</string>
    <string name="inapp_unlock_features">Unlock the Premium features</string>
    <string name="inapp_seconditem_description">I really like this app!</string>
    <string name="inapp_thirditem_description">I love this app!</string>
    <string name="backup_accounts">Backup the accounts</string>
    <string name="restore_accounts">Restore the accounts</string>
    <string name="share_accounts">Backup and share the accounts</string>
    <string name="importing_accounts">Importing the accounts…</string>
    <string name="exporting_accounts">Exporting the accounts...</string>
    <string name="backup_not_found">No backups found</string>
    <string name="err_cant_open_the_file">Cannot open the file</string>
    <string name="err_temp_folder_doesnt_exist">Temporary folder does not exist</string>
    <string name="err_occured">An error occurred</string>
    <string name="ui_ux">Ui</string>
    <string name="folder">Folder</string>
    <string name="remove">Remove</string>
    <string name="modification_date">Modification date</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="sort">Sort</string>
    <string name="open">Open</string>
    <string name="file_modified">The file %1$s was modified, do you want to upload it?</string>
    <string name="file_saved_with_success">The file %1$s was saved with success!</string>
    <string name="number_of_things_selected">%1$d selected</string>
    <string name="crea_file_remoto">New remote file</string>
    <string name="new_local_file">New local file</string>
    <string name="create_new_account">Create a new account</string>
    <string name="create_new_account_to_start">Create a new account to start.</string>
    <string name="type">Type</string>
    <string name="send_feedback">Send feedback</string>
    <string name="copy_url">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="paste">paste</string>
    <string name="advanced">Advanced</string>
    <string name="auto">Auto</string>
    <string name="bytes">Bytes</string>
    <string name="unit_measurement_for_file_size">Unit of measurement for file size</string>
    <string name="open_source_license">Open Source licenses</string>
    <string name="open_source_license_summary">Show open source licenses</string>
    <string name="show_navigation_breadcrumb">Show navigation breadcrumb</string>
    <string name="open_a_file">Open a file</string>
    <string name="open_this_time_only">Open this time only</string>
    <string name="advise_editor_title">Are you missing Turbo Editor?</string>
    <string name="advise_editor_subtitle">The best free and open source file editor!</string>
    <string name="change_list_type">Change The List Type</string>
    <string name="use_monospace">Use Monospace</string>
    <string name="recent_files">Recent Files</string>
    <string name="text_size">Text Size</string>
</resources>
