<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2012, 2013 Vlad Mihalachi
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        >
    <item
            android:id="@+id/im_save"
            android:showAsAction="ifRoom|withText"
            android:icon="@drawable/ic_action_tick"
            android:title="@string/salva"/>
    <item
            android:id="@+id/im_undo"
            android:showAsAction="ifRoom|withText"
            android:icon="@drawable/ic_action_undo"
            android:title="@string/testo_indietro"
            />
    <item
            android:id="@+id/im_redo"
            android:showAsAction="ifRoom|withText"
            android:icon="@drawable/ic_action_redo"
            android:title="@string/testo_rifai"
            />
    <item
            android:id="@+id/more"
            android:title="@string/preferenze"
            android:showAsAction="ifRoom|withText">
        <menu>
            <item
                    android:id="@+id/im_editor_encoding"
                    android:showAsAction="ifRoom"
                    android:title="@string/codifica"/>
            <item
                    android:id="@+id/im_editor_wrap"
                    android:showAsAction="ifRoom"
                    android:title="@string/wrap_the_text"
                    android:checkable="true"/>
            <item
                    android:id="@+id/im_syntax_highlight"
                    android:showAsAction="ifRoom"
                    android:title="@string/menu_syntax_highlight"
                    android:checkable="true"/>
        </menu>
    </item>
</menu>
